python_ws/log/build_2024-09-24_18-25-33/package_that_uses_package_with_interfaces/stderr.log
  File "/home/victory/Robot-Operating-System/python_ws/install/package_that_uses_package_with_interfaces/lib/python3.10/site-packages/package_that_uses_package_with_interfaces/service_server_node.py", line 29
    ) -> WhatIsThePoint.Response
                                ^
SyntaxError: expected ':'

